# decodeck

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  release-plz.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
specs/001-base64-decoder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-base64-decoder/checklists/: requirements.md
specs/001-base64-decoder/contracts/: cli-interface.md
specs/002-shell-completions/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-shell-completions/checklists/: requirements.md
specs/002-shell-completions/contracts/: cli-interface.md
specs/003-multi-encoding/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multi-encoding/checklists/: requirements.md
specs/003-multi-encoding/contracts/: cli-interface.md
specs/004-github-actions/: spec.md
specs/004-github-actions/checklists/: requirements.md
src/: error.rs  lib.rs
src/decoder/: mod.rs  variants.rs
src/encoding/: base32.rs  base64.rs  base85.rs  chain.rs  detect.rs  encode.rs  hex.rs  mod.rs  scan.rs  url.rs
src/input/: mod.rs  sources.rs
src/interactive/: mod.rs
src/metadata/: magic.rs  mod.rs
src/output/: json.rs  mod.rs  text.rs
tests/: cli_integration.rs  completions_test.rs  decode_integration.rs  encoding_integration.rs  output_integration.rs  performance_test.rs  property_test.rs  unit_tests.rs
tests/integration/: decode_test.rs  mod.rs
tests/unit/: decoder_test.rs  interactive_test.rs  metadata_test.rs  mod.rs  output_test.rs
(+1 files in other folders)
