[package]
name = "decodeck"
version = "0.1.0"
edition = "2021"
description = "CLI tool for decoding Base64 data with metadata display and interactive viewing"
license = "MIT"
repository = "https://github.com/theburrowhub/decodeck"

[[bin]]
name = "decodeck"
path = "src/bin/decodeck.rs"

[lib]
name = "decodeck"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
base64 = "0.22"
data-encoding = "2.5"
percent-encoding = "2.3"
ascii85 = "0.2"
infer = "0.16"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opener = "0.7"
arboard = "3.4"
quick-xml = "0.37"

[dev-dependencies]
proptest = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
